--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -8,3 +8,9 @@ logging.level.com.ganzux = DEBUG
 
 application.version = 1
 application.name = client
+
+destination.server.host = 127.0.0.1
+destination.server.port = 8080
+destination.server.endPointEmployeesGet = /employees
+
+service.type.implementation = webclient
